overflow fixed and close lightbox added

--- a/styles/main.css
+++ b/styles/main.css
@@ -113,7 +113,8 @@ p span {
 
 .hidden {
 	display: none;
-	border-bottom: groove rgba(53,53,54, .3) 10px;
+	border-bottom: solid rgba(53,53,54, .3) 10px;
+	border-top: solid rgba(53,53,54, .3) 10px;
 }
 
 
@@ -197,8 +198,8 @@ code {
 	margin: 0 auto;
   display: block;
   margin-top: 100px;
-  padding: 12px;
-  width: 600px;/* para desktop*/
+  padding: 15px;
+  width: 600px; /*para desktop*/
 }
 
 .lightbox {
@@ -209,6 +210,16 @@ code {
 	height: 100%;
 	top: 0;
 	overflow: auto;
+	z-index: 1;
+}
+
+
+#close-code {
+	position: absolute;
+  top: 0;
+  right: 0;
+  padding: 15px;
+  color: white;
 }
 
 
